# tcproxy

./: .editorconfig  .env  .gitignore  Cargo.toml  README.md  \  config.json  lcov.info  perf.data  tcproxy.db
src/: app.rs  args.rs  duplex_stream.rs  lib.rs  main.rs  port_manager.rs  server.rs
src/codec/: mod.rs  tcp_stream.rs  tcp_stream_codec.rs
src/proxy/: mod.rs  proxy_client.rs  proxy_client_reader.rs  proxy_client_writer.rs  proxy_server.rs
src/tcp/: listener.rs  mod.rs  tcp_connection.rs
tcproxy-auth/: .gitignore  Dockerfile  tcproxy.api.sln  tcproxy.api.sln.DotSettings
tcproxy-auth-ui/: .eslintrc.json  package.json
tcproxy-auth-ui/public/: default-style.css  index.html
tcproxy-auth-ui/src/: App.tsx  index.tsx  router.tsx
tcproxy-auth-ui/src/components/AppContainer/: index.tsx  styles.tsx
tcproxy-auth-ui/src/components/Button/: index.tsx  styles.tsx
tcproxy-auth-ui/src/components/FormInput/: index.tsx  types.ts
tcproxy-auth-ui/src/components/Grid/: index.ts
tcproxy-auth-ui/src/components/Input/: index.tsx  styles.tsx  types.ts
tcproxy-auth-ui/src/components/LoadingOverlay/: index.tsx  styles.ts
tcproxy-auth-ui/src/contexts/: AppContext.tsx
tcproxy-auth-ui/src/pages/notfound/: index.tsx
tcproxy-auth-ui/src/pages/signin/: index.ts  index.tsx  signin.tsx  styles.ts  types.ts
tcproxy-auth-ui/src/pages/signup/: index.tsx  styles.ts  types.ts
tcproxy-auth-ui/src/services/: api.ts
tcproxy-auth/Tcproxy.Api/: Program.cs  Tcproxy.Api.csproj  appsettings.json
tcproxy-auth/Tcproxy.Api/Application/Behaviours/: ValidationBehavior.cs
tcproxy-auth/Tcproxy.Api/Controllers/: AuthenticationController.cs  UserController.cs
tcproxy-auth/Tcproxy.Api/Middlewares/: ErrorHandlerMiddleware.cs
tcproxy-auth/Tcproxy.Api/Properties/: launchSettings.json
tcproxy-auth/Tcproxy.Application/: Tcproxy.Application.csproj
tcproxy-auth/Tcproxy.Application/Interfaces/: IHttpRequest.cs
tcproxy-auth/Tcproxy.Application/Mappings/: AutoMapperProfile.cs
tcproxy-auth/Tcproxy.Application/Responses/: ApiError.cs  UserResponse.cs  ValidationErrorDto.cs
tcproxy-auth/Tcproxy.Core/: Option.cs  Tcproxy.Core.csproj
tcproxy-auth/Tcproxy.Core/Entities/: Account.cs  BaseEntity.cs  User.cs
tcproxy-auth/Tcproxy.Core/Exceptions/: EntityAlreadyExists.cs  InvalidCredentialsException.cs  NotFoundException.cs
tcproxy-auth/Tcproxy.Core/Options/: MongodbOptions.cs
tcproxy-auth/Tcproxy.Persistence/: Tcproxy.Persistence.csproj
tcproxy-auth/Tcproxy.Persistence/Context/: MongodbContext.cs
tcproxy-auth/Tcproxy.Persistence/Repositories/: UserRepository.cs
tcproxy-auth/Tcproxy.Tests/: Tcproxy.Tests.csproj
tcproxy-auth/Tcproxy.Tests/Utils/: FakeIt.cs
tcproxy-cli/: Cargo.toml
tcproxy-cli/src/: app.rs  args.rs  client_state.rs  console_updater.rs  frame_reader.rs  frame_writer.rs  lib.rs  local_connection.rs  main.rs  ping_sender.rs  server_addr.rs  shutdown.rs
tcproxy-cli/src/commands/: config.rs  data_packet.rs  incoming_socket.rs  listen.rs  login.rs  mod.rs  remote_disconnected.rs
tcproxy-cli/src/commands/contexts/: create_context.rs  list_contexts.rs  mod.rs  set_default_context.rs
tcproxy-cli/src/config/: app_config.rs  app_config_error.rs  app_context.rs  app_context_error.rs  context_manager.rs  directory_resolver.rs  mod.rs
tcproxy-core/: Cargo.toml
tcproxy-core/src/: command.rs  config.rs  frame_error.rs  frame_reader.rs  lib.rs  stream.rs  tcp.rs  tcp_frame.rs  tcp_stream.rs  tls.rs  transport.rs
tcproxy-core/src/auth/: mod.rs  token_handler.rs
tcproxy-core/src/framing/: authenticate.rs  authenticate_ack.rs  client_connected.rs  client_connected_ack.rs  data_packet.rs  error.rs  incoming_socket.rs  local_client_disconnected.rs  mod.rs  ping.rs  pong.rs  remote_socket_disconnected.rs  socket_connected.rs  socket_disconnected.rs
tcproxy-core/src/http/: api_client.rs  mod.rs
tcproxy-core/src/io/: mod.rs
tcproxy-core/src/tcp/: mod.rs  socket_connection.rs  socket_listener.rs  stream_reader.rs  tcp_listener.rs  tcp_stream.rs
tcproxy-core/src/transport/: mod.rs  reader.rs  writer.rs
tcproxy-management/tcproxy-management-api/: Cargo.toml
tcproxy-management/tcproxy-management-api/src/: fmt.rs  lib.rs  main.rs
tcproxy-management/tcproxy-management-api/src/app/: mod.rs  web.rs
tcproxy-management/tcproxy-management-api/src/app/auth/: mod.rs  requests.rs  urls.rs
tcproxy-management/tcproxy-management-api/src/app/auth/commands/: create.rs  mod.rs
tcproxy-management/tcproxy-management-api/src/app/bson/: mod.rs
tcproxy-management/tcproxy-management-api/src/app/core/: command.rs
tcproxy-management/tcproxy-management-api/src/app/data/: error.rs  mod.rs
tcproxy-management/tcproxy-management-api/src/app/users/: data.rs  mod.rs  model.rs  requests.rs  urls.rs
tcproxy-management/tcproxy-management-api/src/app/users/commands/: create.rs
tcproxy-management/tcproxy-management-api/src/app/users/queries/: mod.rs
tcproxy-server/: .env  Cargo.toml  config.json  lcov.info  tcproxy.db
tcproxy-server/migrations/2023-06-11-192208_initial_migration/: up.sql
tcproxy-server/src/: args.rs  config.rs  lib.rs  main.rs  schema.rs  server.rs
tcproxy-server/src/commands/: authenticate.rs  client_connected.rs  data_packet_client.rs  get_port.rs  local_client_disconected.rs  local_client_disconnected.rs  mod.rs  ping.rs
tcproxy-server/src/commands/authenticate/: authenticate.rs  handler.rs  mod.rs
tcproxy-server/src/managers/: account_manager.rs  authentication_manager.rs  connections_manager.rs  feature_manager.rs  mod.rs  port_manager.rs
tcproxy-server/src/models/: user.rs
tcproxy-server/src/proxy/: Untitled-1.json  connection.rs  frame_handler.rs  mod.rs  proxy_auth.rs  proxy_client_reader.rs  proxy_client_writer.rs  proxy_server.rs
tcproxy-server/src/state/: mod.rs  proxy_state.rs
tcproxy-server/src/tcp/: connection.rs  connection_reader.rs  connection_writer.rs  listener.rs  mod.rs
tcproxy-server/src/tests/: integration_test.rs  server.rs  utils.rs
tcproxy-server/tests/: server.rs
(+11 files in other folders)
