[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
bytes = "1.2.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
uuid = "1.1.2"