[package]
name = "tcproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
tokio-codec = "0.1.2"
bytes = "1.2.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
uuid = "1.1.2"
clap = { version = "3.2.15", features = ["derive", "color", "default"] }