[package]
name = "tcproxy-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tcproxy_core"
path = "src/lib.rs"

[dependencies]
bytes = "1.2.0"
tracing = "0.1.35"
async-trait = "0.1.57"
tokio = { version = "1.20.1", features = ["full", "tracing"] }
uuid = { version = "1.1.2", features = ["v4"]}
mockall = "0.11.2"
byteorder = "1.4.3"
chrono = "0.4.23"
rand = "0.8.5"
tokio-test = "0.4.2"
serde_json = "1.0"
serde = "1.0.147"
jsonwebtoken = "8"
mongodb = "2.3.1"
