[package]
name = "tcproxy-management-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
mongodb = "2.3.1"
dotenv = "0.15.0"
tcproxy-core = { version = "0.1.0", path = "../../tcproxy-core" }
