[package]
name = "tcproxy-management-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.9"
mongodb = "2.3.1"
dotenv = "0.15.0"
tcproxy-core = { version = "0.1.0", path = "../../tcproxy-core" }
futures-util = "0.3.25"
tracing = "0.1.35"
uuid = { version = "1.1.2", features = ["v4"]}
tracing-subscriber = { version = "0.3.15", features=["std", "env-filter"]}
tracing-actix-web = "0.6.2"
actix-web-opentelemetry = "0.13.0"
opentelemetry = "0.18.0"
tracing-bunyan-formatter = "0.3.4"
tracing-opentelemetry = "0.18.0"
tracing-log = "0.1.3"
lazy_static = "1.4.0"
fancy-regex = "0.11.0"
derive_builder = "0.12.0"
bcrypt = "0.13"
validator = "0.16.0"
async-trait = "0.1.61"